--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run tmoj-webapp:serve-ssr",
+    "serve:ssr": "node dist/tmoj-webapp/server/main.js",
+    "build:ssr": "ng build && ng run tmoj-webapp:server",
+    "prerender": "ng run tmoj-webapp:prerender"
   },
   "private": true,
   "dependencies": {
@@ -17,7 +21,10 @@
     "@angular/forms": "~12.1.0-",
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
+    "@angular/platform-server": "~12.1.0-",
     "@angular/router": "~12.1.0-",
+    "@nguniversal/express-engine": "^12.1.0",
+    "express": "^4.15.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -26,6 +33,8 @@
     "@angular-devkit/build-angular": "~12.1.3",
     "@angular/cli": "~12.1.3",
     "@angular/compiler-cli": "~12.1.0-",
+    "@nguniversal/builders": "^12.1.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
