--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~12.1.0-",
     "@nguniversal/express-engine": "^12.1.0",
     "express": "^4.15.2",
+    "ng-zorro-antd": "^12.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
